--- a/pppppp/View/AuthView/CreateAccountView.storyboard
+++ b/pppppp/View/AuthView/CreateAccountView.storyboard
@@ -68,7 +68,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
                                 <connections>
-                                    <action selector="GooButton" destination="Byd-zG-khn" eventType="touchUpInside" id="QAo-2t-xkN"/>
+                                    <action selector="createAccountButton" destination="Byd-zG-khn" eventType="touchUpInside" id="QAo-2t-xkN"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cdz-cJ-JBb">
